Add AnnouncerExecutor